# reddit-scraper

./: .gitignore  Dockerfile  TODO.md  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: scheduler.py  scraper.py
backend/static/: index.html
backend/static/assets/: DashboardView-DWW3E1J7.css  DashboardView-LsfTHtDL.js  PostDetailView-CZYZWb5i.js  PostDetailView-CcFoFoRD.css  PostsView-CJYl1Xkf.js  PostsView-D1_cpyjr.css  SearchView-BBmDeopo.js  SearchView-Bfw5L60d.css  SubredditsView-Bg8v2OaA.css  SubredditsView-Y4DSBhk6.js  api-CCWHsAt8.js  index-D8_OaZfV.css  index-VNE3eVQ_.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  api.ts
frontend/src/router/: index.ts
frontend/src/views/: DashboardView.vue  PostDetailView.vue  PostsView.vue  SearchView.vue  SettingsView.vue  SubredditDetailView.vue  SubredditsView.vue
