[project]
name = "reddit-scraper"
version = "0.1.0"
description = "Reddit scraper with FastAPI backend and Vue frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "httpx>=0.28",
    "feedparser>=6.0",
    "pydantic>=2.10",
    "beautifulsoup4>=4.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
